--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "皆さん 初めまして"
-header-img: "img/about.jpg"
+description: 
+header-img: "img/markus.jpg"
 ---
 
 <!-- Language Selector -->
@@ -12,10 +12,10 @@ header-img: "img/about.jpg"
 </select> -->
 
 <!-- Chinese Version -->
-<div class="zh post-container">
+<!--<div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
+    <!--<blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
     <p><strong>皆さん 初めまして</strong></p>
@@ -26,7 +26,7 @@ header-img: "img/about.jpg"
 		
 		<p>希望往全栈攻城狮的方向走，然而目前只会HTML+css+JavaScript<span class="truth">大学过的真的废</span>，现在正在学jq和vue</p>
 		
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+<!--<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" >
       <h4 class="panel-title">
@@ -44,7 +44,7 @@ header-img: "img/about.jpg"
 </div>
 		
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 结合的模板搭建的 个人博客。感谢<a href="https://github.com/Huxpro/huxpro.github.io">Hux</a>提供的博客模版。我在GitHub主页<a href="https://github.com/FujishiroOtone">GitHub·Otone</a> 与 简书主页<a href="https://www.jianshu.com/u/3bf62aac1afc">Otone</a>。如果有什么问题，欢迎提出探讨~</p>
+    <!--<p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 结合的模板搭建的 个人博客。感谢<a href="https://github.com/Huxpro/huxpro.github.io">Hux</a>提供的博客模版。我在GitHub主页<a href="https://github.com/FujishiroOtone">GitHub·Otone</a> 与 简书主页<a href="https://www.jianshu.com/u/3bf62aac1afc">Otone</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
