--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ header-img: "img/markus.jpg"
 </div> -->
 
 <!-- Handle Language Change -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     // get nodes
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
@@ -122,7 +122,7 @@ header-img: "img/markus.jpg"
                 <!--Gitalk评论start  -->
                 {% if site.gitalk.enable %}
                 <!-- 引入Gitalk评论插件  -->
-                <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+                <!--<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
                 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
                 <div id="gitalk-container"></div>
                 <script type="text/javascript">
@@ -143,14 +143,14 @@ header-img: "img/markus.jpg"
  <!-- disqus 评论框 start  -->
 {% if site.disqus.enable %}
 
-<div class="comment">
+<!--<div class="comment">
     <div id="disqus_thread" class="disqus-thread">
     </div>
 </div>
 <!-- disqus 评论框 end -->
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
