--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: 
-header-img: "img/universe.jpg"
+header-img: "img/markus.jpg"
 ---
 
 <!-- Page Header -->
